# G4-Mac-Mini-Audio

./: .gitignore  COMMUNITY-POST.md  README.md  build.sh
csm/mini-audio-strip/: CMakeLists.txt  mini_audio_strip.c  mini_audio_strip.r  mini_audio_strip_icons.r  png-to-icons.py
init/: MacMiniAudioFix.c  MacMiniAudioFix.r  README.md
prebuilt/: MiniAudioStrip.img  MiniAudioTool.img  README.md
scripts/: wrap-apm.py
tools/MiniAudioTool/: CMakeLists.txt  MiniAudioTool.c  MiniAudioTool.r
